<resources>
    <string name="app_name">RegistrationFormTask</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_confirm">Подтвердите пароль</string>
    <string name="password">Пароль</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="greetings">Добро пожаловать!</string>

    <string name="saved_name">"name_key"</string>
    <string name="saved_surname">"surname_key"</string>
    <string name="saved_date">"date_key"</string>
    <string name="saved_password">"password_key"</string>
</resources>